--- a/playbooks/vsp_direct/external_paritygroup.yml
+++ b/playbooks/vsp_direct/external_paritygroup.yml
@@ -1,8 +1,8 @@
 ---
 ####################################################################
-# Example : External Path Group Playbook
+# Example : External Parity Group Playbook
 ####################################################################
-- name: External Path Group
+- name: External Parity Group
   hosts: localhost
   gather_facts: false
 
@@ -17,6 +17,25 @@
       password: "{{ vault_storage_secret }}"
 
   tasks:
+    ######################################################################
+    # Task Name : Create external parity group
+    ######################################################################
+    - name: Create external parity group
+      hitachivantara.vspone_block.vsp.hv_external_paritygroup:
+        connection_info: "{{ connection_info }}"
+        state: "present"
+        spec:
+          external_parity_group_id: "1-17"
+          external_path_group_id: 4
+          port_id: "CL6-B"
+          external_wwn: "50060e8012277d71"
+          lun_id: 20
+      register: result
+
+    - name: Debug the result variable
+      ansible.builtin.debug:
+        var: result
+
     #######################################################################
     # Task Name : Change the MP blade assigned to an external parity group
     #######################################################################
@@ -50,14 +69,30 @@
         var: result
 
     ######################################################################
-    # Task Name : Disconnect from a volume on the external storage system
+    # Task Name : Disconnect from a volume on the external parity group
     ######################################################################
-    - name: Disconnect from a volume on the external storage system
+    - name: Disconnect from a volume on the external parity group
       hitachivantara.vspone_block.vsp.hv_external_volume:
         connection_info: "{{ connection_info }}"
         state: "disconnect"
         spec:
-          external_parity_group_id: "1-2"
+          external_parity_group: "1-2"
+      register: result
+
+    - name: Debug the result variable
+      ansible.builtin.debug:
+        var: result
+
+    ######################################################################
+    # Task Name : Delete external parity group
+    ######################################################################
+    - name: Delete external parity group
+      hitachivantara.vspone_block.vsp.hv_external_paritygroup:
+        connection_info: "{{ connection_info }}"
+        state: "absent"
+        spec:
+          external_parity_group_id: "1-17"
+          force: true
       register: result
 
     - name: Debug the result variable
