--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -1061,13 +1061,27 @@ releases:
     changes:
       bugfixes:
       - Resolved issue during GAD pair creation when resource lock is enabled.
-      - Resolved issue with quorum disk creation on VSP One B85 storage systems.
-      - Resolved issue with remote connection creation on VSP One B85 storage systems.
-      - Resolved issue with storage system facts retrieval module for VSP One B85
-        storage systems.
-      - Various additional bug fixes and enhancements for VSP One B85 storage systems.
-      release_summary: This minor release of `hitachivantara.vspone_block` bugfixes
-        and improves existing functionality related to VSP One B85 storage systems.
+      - Various additional bug fixes and enhancements for VSP One storage systems
+        and VSP One SDS Block storage systems.
+      release_summary: This minor release of hitachivantara.vspone_block includes
+        bug fixes and improved error handling for VSP One storage systems and VSP
+        One SDS Block storage systems.
     fragments:
     - release-4.4.1.yml
-    release_date: '2025-11-12'
+    release_date: '2025-11-17'
+  4.4.2:
+    changes:
+      bugfixes:
+      - Resolved issue with quorum disk creation on VSP One Block 85 storage systems.
+      - Resolved issue with remote connection creation on VSP One Block 85 storage
+        systems.
+      - Resolved issue with storage system facts retrieval module for VSP One Block
+        85 storage systems.
+      - Various additional bug fixes and enhancements for VSP One Block 85 storage
+        systems.
+      release_summary: This minor release of `hitachivantara.vspone_block` focuses
+        on improving error handling and introduces limited support for VSP One Block
+        85 only over Fibre Channel (FC).
+    fragments:
+    - release-4.4.2.yml
+    release_date: '2025-11-17'
