--- a/changelogs/fragments/release-4.4.1.yml
+++ b/changelogs/fragments/release-4.4.1.yml
@@ -1,8 +1,5 @@
 ---
-release_summary: "This minor release of `hitachivantara.vspone_block` bugfixes and improves existing functionality related to VSP One B85 storage systems."
+release_summary: "This minor release of hitachivantara.vspone_block includes bug fixes and improved error handling for VSP One storage systems and VSP One SDS Block storage systems."
 bugfixes:
-  - "Resolved issue with storage system facts retrieval module for VSP One B85 storage systems."
-  - "Resolved issue with remote connection creation on VSP One B85 storage systems."
-  - "Resolved issue with quorum disk creation on VSP One B85 storage systems."
   - "Resolved issue during GAD pair creation when resource lock is enabled."
-  - "Various additional bug fixes and enhancements for VSP One B85 storage systems."
+  - "Various additional bug fixes and enhancements for VSP One storage systems and VSP One SDS Block storage systems."
