--- a/playbooks/vsp_direct/remote_connection.yml
+++ b/playbooks/vsp_direct/remote_connection.yml
@@ -19,6 +19,8 @@
   tasks:
     ######################################################################################
     # Task Name : Create a new remote connection
+    # To create/add a remote path for an iSCSI port,
+    # register in advance the iSCSI port using iscsi_remote_connection.yml playbook
     ######################################################################################
     - name: Create a new remote connection
       hitachivantara.vspone_block.vsp.hv_remote_connection:
